// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 500px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 10000px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 1000000px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render component 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 300px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; display: inline-flex;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render fragments 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 200px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render non elements 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 200px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        string
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100px; height: 800px;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 500px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`reverse > should render many items 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="display: flex; flex-direction: column; justify-content: flex-end; min-height: 100%; overflow: clip;"
    >
      <div
        style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;"
      >
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
        >
          <div>
            0
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
        >
          <div>
            1
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
        >
          <div>
            2
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
        >
          <div>
            3
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
        >
          <div>
            4
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;"
        >
          <div>
            5
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;"
        >
          <div>
            6
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;"
        >
          <div>
            7
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;"
        >
          <div>
            8
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;"
        >
          <div>
            9
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;"
        >
          <div>
            10
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;"
        >
          <div>
            11
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;"
        >
          <div>
            12
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;"
        >
          <div>
            13
          </div>
        </div>
        <div
          style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;"
        >
          <div>
            14
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%; background: red;"
    tabindex="0"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 50px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should pass index to items 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
    >
      <div
        data-index="0"
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        data-index="1"
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        data-index="2"
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        data-index="3"
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        data-index="4"
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render with gap 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 300px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 60px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 120px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 180px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 240px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render with keepMounted 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;"
      >
        <div>
          6
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;"
      >
        <div>
          7
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;"
      >
        <div>
          8
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;"
      >
        <div>
          9
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;"
      >
        <div>
          10
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;"
      >
        <div>
          11
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;"
      >
        <div>
          12
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;"
      >
        <div>
          13
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;"
      >
        <div>
          14
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 1000px;"
      >
        <div>
          20
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 1500px;"
      >
        <div>
          30
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 2000px;"
      >
        <div>
          40
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 2500px;"
      >
        <div>
          50
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 3000px;"
      >
        <div>
          60
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 3500px;"
      >
        <div>
          70
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 4000px;"
      >
        <div>
          80
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 4500px;"
      >
        <div>
          90
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render with render prop 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 50000px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          This is 0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          This is 1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          This is 2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          This is 3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          This is 4
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          This is 5
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;"
      >
        <div>
          This is 6
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;"
      >
        <div>
          This is 7
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;"
      >
        <div>
          This is 8
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;"
      >
        <div>
          This is 9
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;"
      >
        <div>
          This is 10
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;"
      >
        <div>
          This is 11
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;"
      >
        <div>
          This is 12
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;"
      >
        <div>
          This is 13
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;"
      >
        <div>
          This is 14
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 0 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 50px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;"
      >
        <div>
          6
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;"
      >
        <div>
          7
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;"
      >
        <div>
          8
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;"
      >
        <div>
          9
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;"
      >
        <div>
          10
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;"
      >
        <div>
          11
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;"
      >
        <div>
          12
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;"
      >
        <div>
          13
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;"
      >
        <div>
          14
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 500000px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;"
      >
        <div>
          6
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;"
      >
        <div>
          7
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;"
      >
        <div>
          8
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;"
      >
        <div>
          9
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;"
      >
        <div>
          10
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;"
      >
        <div>
          11
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;"
      >
        <div>
          12
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;"
      >
        <div>
          13
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;"
      >
        <div>
          14
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render component 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 150px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render fragments 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 100px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render non elements 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 100px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        string
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="display: block; overflow-y: auto; contain: strict; width: 100px; height: 800px;"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
